--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: restaurant_preorder
     env: python
-    buildCommand: "pip install -r ./requirements.txt"
+    buildCommand: "pip install -r ./requirements.txt && python manage.py collectstatic --noinput"
     startCommand: "gunicorn restaurant_preorder.wsgi:application"
     envVars:
       - key: DATABASE_URL
