--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: restaurant_preorder
     env: python
     buildCommand: "pip install -r ./requirements.txt && python manage.py collectstatic --noinput"
-    startCommand: "gunicorn restaurant_preorder.wsgi:application"
+    startCommand: "python manage.py migrate && gunicorn restaurant_preorder.wsgi"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
