--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,15 @@
 services:
   - type: web
-    name: restaurant_preorder
+    name: restaurant-preorder
     env: python
-    buildCommand: "pip install -r ./requirements.txt && python manage.py collectstatic --noinput"
-    startCommand: "python manage.py migrate && gunicorn restaurant_preorder.wsgi"
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: |
+      python manage.py migrate
+      sleep 5
+      gunicorn restaurant_preorder.wsgi
+
+
+
     envVars:
       - key: DATABASE_URL
         fromDatabase:
@@ -13,6 +19,7 @@ services:
         generateValue: true
       - key: WEB_CONCURRENCY
         value: 4
+        
 
 databases:
   - name: restaurant_preorder_db
