feat: Implement Twilio and S3 configurations for Render deployment
This commit introduces the following changes:
- Configured Twilio integration for SMS notifications, utilizing environment variables for credentials.
- Set up AWS S3 for media file storage, including necessary settings for production deployment on Render.
- Updated `render.yaml` to include `collectstatic` during deployment and improved migration handling.
- Modified `requirements.txt` to add `dj-database-url`.
- Adjusted `orders/models.py` and `orders/migrations/` for model updates, including the removal of an old migration file.
- Cleaned up `orders/tests.py` by removing an unused import.
- Refactored Twilio usage in `orders/views.py` to use settings.
- Consolidated and updated various Django settings in `restaurant_preorder/settings.py` for better organization and production readiness.

--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,9 @@ services:
     env: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: |
-      python manage.py migrate
-      sleep 5
+      set -e
+      python manage.py migrate --noinput
+      python manage.py collectstatic --noinput
       gunicorn restaurant_preorder.wsgi
 
 
